syntax = "proto3";

option java_package = "com.sanmer.mrepo.datastore";
option java_multiple_files = true;

enum DarkMode {
  FOLLOW_SYSTEM = 0;
  ALWAYS_OFF = 1;
  ALWAYS_ON = 2;
}